# cat-enum

./: .ghci.tmp  .ghci_test.hs  .gitignore  CHANGELOG.md  README.md  cat-enum.cabal  eqtest.txt  notes.md  notes.txt
app/: Main.hs
bench/: BenchCenter.hs  BenchEnrich.hs  BenchUpSet.hs  CheckDual.hs  Profile.hs  ShowCategories.hs  VerifyCats.hs
paper/: exact-enumeration.tex
src/CodexSlop/: Biconnected.hs  CLI.hs  Canonical.hs  Category.hs  Copresheaf.hs  CspSearch.hs  Decompose.hs  Enrichment.hs  Generate.hs  Group.hs  Profunctor.hs  Search.hs  Shape.hs  Thin.hs
test/: Test.hs
